<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clViewResultViewer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNRanking"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@drawable/borda_verde_layout"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/txt_nr_ranking"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNomeJogador"
            android:layout_width="107dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@drawable/borda_verde_layout"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/txt_nome_jogador"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPalpiteJogador"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@drawable/borda_verde_layout"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/txt_palpite_jogador"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResultadoJogada"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@drawable/borda_verde_layout"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/txt_resultado_jogada"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="347dp"
        android:layout_height="3dp"
        android:background="#90CAF9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvRankingPsn"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@color/backGroundApp"
            android:gravity="center"
            android:text="@string/txt_ranking_nr"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cor_nome_app"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJogadorNome"
            android:layout_width="107dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_jogador_nome"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cor_nome_app"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJogadorPalpite"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:background="@color/backGroundApp"
            android:gravity="center"
            android:text="@string/txt_jogador_palpite"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cor_nome_app"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvJogadaResultado"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_jogada_resultado"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cor_nome_app"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@android:color/system_accent1_100"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>